<resources>
    <string name="app_name">CovidBlog</string>
    <string name="welcome">Welcome to</string>
    <string name="covid_blog">Covid Blog</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login_button">Login to Account</string>
    <string name="new_account">Need a new Account ??</string>
    <string name="actoin_search_text">Search</string>
    <string name="action_settings_text">Account Settings</string>
    <string name="action_logout_text">Log out</string>
    <string name="create_account">Create a new Account</string>
    <string name="reg_btn_text">Create New Account</string>
    <string name="reg_login_text">Already have an Account ??</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
